SonarQube (Maintainability: Low) "Replace this usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()' and ensure that the list is unmodified." [Solved]